platform/argo-workflows/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: argo-workflows
  namespace: argo-workflows
spec:
  parentRefs:
    - group: gateway.networking.k8s.io
      kind: Gateway
      name: external-gateway
      namespace: platform-gateway
      sectionName: https
  hostnames:
    - argoworkflows.hacwa.co.uk
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /
      timeouts:
        request: 600s
        backendRequest: 600s
      backendRefs:
        - group: ""
          kind: Service
          name: argo-workflows-server
          port: 2746
          weight: 1
